add role to list to work with macOS voiceover

--- a/filterCorrespondence_example.html
+++ b/filterCorrespondence_example.html
@@ -59,9 +59,9 @@
             <button class="govuk-button" data-module="govuk-button">
                 Add correspondence
             </button>
-            <section class="nigov-filter" aria-labelledby="filterdesc">
+            <div class="nigov-filter">
                 <h2 id="filterdesc" class="govuk-heading-m">Selected filters</h2>
-                <ul class="govuk-list nigov-filter--list">
+                <ul role="list" class="govuk-list nigov-filter--list" aria-labelledby="filterdesc">
                     <li>My correspondence</li>
                     <li>(2014/187/EU): Commission Implementing Decision of 3 April 2014 amending Decision 2009/821/EC as
                         regards the lists of border inspection posts and veterinary units in Traces (notified under
@@ -77,7 +77,7 @@
                         Clear filters
                     </button>
                 </div>
-            </section>
+            </div>
 
         </main>
     </div>
