change button name to reset filters

--- a/filterCorrespondence_example.html
+++ b/filterCorrespondence_example.html
@@ -74,7 +74,7 @@
                         Edit filters
                     </button>
                     <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-                        Clear filters
+                        Reset filters
                     </button>
                 </div>
             </div>
