change edit filter button to green button

--- a/filterCorrespondence_example.html
+++ b/filterCorrespondence_example.html
@@ -70,7 +70,7 @@
                     <li>Department of Finance</li>
                 </ul>
                 <div class="govuk-button-group">
-                    <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
+                    <button class="govuk-button" data-module="govuk-button">
                         Edit filters
                     </button>
                     <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
